.k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: gke-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
spec:
  rules:
  - host: dev.marutitech.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: maruti-nextjs
            port:
              number: 80
